# kingdom

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
assets/: court_room.ldtk
assets/characters/: baker.character.yaml  blacksmith.character.yaml  dream-man.character.yaml  jeremy.character.yaml  merideth.character.yaml  nun.character.yaml  prince.character.yaml  princess.character.yaml  tax-man.character.yaml  village-leader.character.yaml  west-duchess.character.yaml
assets/court_room/simplified/Level_0/: data.json
assets/ui/: heart.aseprite  ui.aseprite
concoeur/assets/characters/: baker.character.yaml  blacksmith.character.yaml  nun.character.yaml  prince.character.yaml  princess.character.yaml  tax-man.character.yaml  west-duchess.character.yaml
concoeur/assets/ui/: ui.aseprite
src/: animated_sprites.rs  animation.rs  character.rs  end.rs  main.rs  menu.rs  music.rs  pixel_perfect.rs  state.rs  time_state.rs  type_writer.rs  ui.rs
src/state/: handlers.rs
src/ui/: background.rs  decision.rs  insight.rs  mod.rs
