[package]
name = "kingdom"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.1", features = ["dynamic_linking"] }
bevy_ecs_tilemap = "0.14.0"
bevy_ecs_ldtk = { version = "0.10.0", features = ["atlas"] }
rand = "0.8.5"
fxhash = "0.2.1"
# avian2d = { version = "0.1", default-features = false, features = [
#   "2d",
#   "bevy_scene",
#   "debug-plugin",
#   "f32",
#   "parry-f32",
# ] }
leafwing-input-manager = "0.15"
bevy-inspector-egui = "0.25.2"
bevy_hanabi = "0.12.2"
sickle_ui = "0.2.1"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 0

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
