[package]
name = "kingdom"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.1", features = ["dynamic_linking", "wav", "mp3"] }
rand = "0.8.5"
bevy-inspector-egui = "0.25.2"
bevy_asset_loader = "0.21.0"
bevy_tweening = "0.11.0"
sickle_ui = "0.2.1"
serde = "1"
phf = "0.11"
foldhash = "0.1"
bevy_hanabi = "0.12.2"
serde_yaml = "0.9"
bevy_kira_audio = { version = "0.20", features = ["wav"] }

[dependencies.bevy_common_assets]
version = "0.11.0"
features = ["yaml"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 0

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
